--- a/package.json
+++ b/package.json
@@ -44,5 +44,21 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+   "users": [{
+   "username": "Shane",
+   "password": "password"
+ }, {
+    "username": "user1",
+   "password": "password"
+   },
+     {
+    "username": "user2",
+   "password": "password"
+   },
+     {
+    "username": "user3",
+   "password": "password"
+   }]
+
 }
